--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -13,7 +13,7 @@ in Kooperation mit dem [StartupDock](https://startupdock.de/)
 
 Brauchst du Softwareentwickler*innen um deine Idee zu realisieren? __Gib Nikolaus dein Gesicht.__
 
-Wir suchen soziale Unternehmungen aller Art (z.B. Social Startups, eingetragene Vereine oder Stiftungen) mit einer App-Idee die die Welt verbessert.
+Wir suchen soziale Unternehmungen aller Art (z.B. Privatpersonen, Social Startups, eingetragene Vereine oder Stiftungen) mit einer App-Idee die die Welt verbessert.
 
 ### [Bewirb dich jetzt!](#bewerbung)
 
