--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -1,13 +1,13 @@
 ---
 title: "home"
-bg: green
-color: white
+bg: white
+color: black
 style: center
 ---
 ![ViperDanta](img/vipersantawobg.png)
 ###### in Kooperation mit dem [StartupDock](https://startupdock.de/)
 <div class="block-slogan">
-<h1><span style="font-size : 22px;">Du brauchst Softawreentwickler*innen um deine Idee zu realisieren?</span></h1>
+<h1><span style="font-size : 22px;">Du brauchst Softwareentwickler*innen um deine Idee zu realisieren?</span></h1>
 </div>
 <div class="block-slogan">
 <h1><span style="font-size : 22px;">Dann gib Nikolaus dein Gesicht!</span></h1>
