--- a/_posts/2000-01-03-why.md
+++ b/_posts/2000-01-03-why.md
@@ -7,7 +7,7 @@ fa-icon: question
 <div class="pricebox">
   <header style="background-color: #093099; text-align: center; padding-left: 0px;"><span style="padding-left: 0px; padding-right: 0px;">Wir Gründer müssen mehr Verantwortung übernehmen.</span></header>
   <div class="figure"><img style="float: none;" src="/img/viperdev.png"></div>
-  <p style="float: left; padding-left: 5px;">Wir sind übrigens <a href="https://viperdev.io/">ViperDev.io</a>, ein Hamburger Startup (gegr. 2017) mit starkem Fokus auf innovative Produkte und möchten sozialen Gründer*innen helfen, digitale Lösungen mit gesellschaftlichem Nutzen zu schaffen.
+  <p style="float: left; padding-left: 5px;">Wir sind übrigens <a href="https://viperdev.io/">VIPERdev.io</a>, ein Hamburger Startup (gegr. 2017) mit starkem Fokus auf innovative Produkte und möchten sozialen Gründer*innen helfen, digitale Lösungen mit gesellschaftlichem Nutzen zu schaffen.
   </p>
   <p style="padding-left: 5px;">
   Als Unternehmensgründende müssen wir weiter als nur auf unsere eigenen Probleme gucken: wir fühlen uns verantwortlich mit unseren Fähigkeiten Probleme gemeinsam zu lösen die gesamtgesellschaftlich relevant sind.
