--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -4,14 +4,16 @@ bg: gray
 color: black
 style: center
 ---
-![ViperDanta](img/vipersantawobg.png)
+[![ViperDanta](img/vipersantawobg.png)](https://viperdev.io/)
 ###### in Kooperation mit dem [StartupDock](https://startupdock.de/)
 <div class="block-slogan">
 <h1><span style="font-size : 22px;">Du brauchst Softwareentwickler*innen um deine Idee zu realisieren?</span></h1>
 </div>
 <div class="block-slogan">
-<h1><span style="font-size : 22px;">Dann gib Nikolaus dein Gesicht!</span></h1>
+<h1><span style="font-size : 22px;">Verändere die Welt!</span></h1>
 </div>
+
+[VIPERdev](https://viperdev.io/) schreibt dem Gewinnerteam des NikolausPITCH Software im Wert von 10.000€.
 
 <a href="#bewerbung" class="button">Jetzt bewerben!</a>
 
