Add visitor event link

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -16,6 +16,7 @@ style: center
 [VIPERdev](https://viperdev.io/) schreibt dem Gewinnerteam des NikolausPITCH Software im Wert von 10.000€.
 
 <a href="#bewerbung" class="button">Jetzt bewerben!</a>
+<a href="https://www.eventbrite.de/e/nikolauspitch-tickets-51460197837" class="button">Als Besucher Anmelden</a>
 
 <div id="img-text">
 <div class="member">
