award: Add pitch training

--- a/_posts/2000-01-02-award.md
+++ b/_posts/2000-01-02-award.md
@@ -31,6 +31,12 @@ fa-icon: trophy
   <li> Mentorship von erfahrenen Gründer*innen um Ideen schnell und fokussiert mit minimalem Aufwand umzusetzen</li>
   <li>Software-Architekturplanung mit einem*r VIPERdev Softwarearchitektur-Expert*in</li></ul></p>
 </div>
+
+<div class="pricebox">
+  <header style="background-color: #ACD9EB;"><h6>Alle Finalisten</h6><span>Pitch Training</span></header>
+  <p>Wir coachen alle Finalisten kostenlos zum Thema Kurzdarstellung der eigenen Idee.</p>
+</div>
+
 <div class="smalltextbox">
 <a class="button" href="https://sils1.typeform.com/to/TsR3Vv" data-mode="popup" data-submit-close-delay="5" target="_blank">Jetzt mitmachen!</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 </div>
