Add pitch training date

--- a/_posts/2000-01-02-award.md
+++ b/_posts/2000-01-02-award.md
@@ -34,7 +34,7 @@ fa-icon: trophy
 
 <div class="pricebox">
   <header style="background-color: #ACD9EB;"><h6>Alle Finalisten</h6><span>Pitch Training</span></header>
-  <p>Wir coachen alle Finalisten kostenlos zum Thema Kurzdarstellung der eigenen Idee.</p>
+  <p>Wir coachen alle Finalisten kostenlos am 3.12.2018 zum Thema Kurzdarstellung der eigenen Idee.</p>
 </div>
 
 <div class="smalltextbox">
