--- a/_posts/2000-01-03-why.md
+++ b/_posts/2000-01-03-why.md
@@ -14,6 +14,6 @@ fa-icon: question
   </p>
 </div>
 <div class="smalltextbox">
-<a href="https://www.eventbrite.de/e/nikolauspitch-tickets-51460197837" class="button">Als Besucher Anmelden</a>
-<a class="button" href="https://sils1.typeform.com/to/TsR3Vv" data-mode="popup" data-submit-close-delay="5" target="_blank">Verbessere die Welt!</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+<a href="https://www.eventbrite.de/e/nikolauspitch-tickets-51460197837" class="button">Als Besucher Registrieren</a>
+<!--<a class="button" href="https://sils1.typeform.com/to/TsR3Vv" data-mode="popup" data-submit-close-delay="5" target="_blank">Verbessere die Welt!</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>-->
 </div>
